fix(deps): correct cryptography version to available release
- Changed cryptography==48.0.0 to cryptography>=42.0.0
- Version 48.0.0 does not exist, causing pip install failure
- Using flexible constraint allows latest compatible version
- Fixes GitHub Actions CI/CD build dependency issue

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ pytest==7.4.4
 ruff==0.1.13
 pyright==1.1.280
 flask-migrate==4.0.7
-cryptography==48.0.0
+cryptography>=42.0.0
 yookassa==3.0.0
 psycopg2-binary==2.9.9
 python-telegram-bot==20.7
