--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ flask==3.0.1
 flask-sqlalchemy==3.1.1
 flask-wtf==1.2.1
 flask-login==0.6.3
+flask-mail==0.9.1
 python-dotenv==1.0.0
 werkzeug==3.0.3
 bcrypt==4.0.1
