--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,33 +92,48 @@ jobs:
       shell: bash
       run: |
         VERSION_TYPE="${{ github.event.inputs.version_type }}"
-        LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "0.0.0")
-        VERSION_NUMBER=${LAST_TAG#v}
-        major=$(echo "$VERSION_NUMBER" | cut -d'.' -f1)
-        minor=$(echo "$VERSION_NUMBER" | cut -d'.' -f2)
-        patch=$(echo "$VERSION_NUMBER" | cut -d'.' -f3)
 
-        echo "Current version: $VERSION_NUMBER ($LAST_TAG)"
-        echo "Version type: $VERSION_TYPE"
-        echo "Parsed: major=$major, minor=$minor, patch=$patch"
-
-        if [ "$VERSION_TYPE" = "major" ]; then
-          major=$((major + 1))
-          minor=0
-          patch=0
-        elif [ "$VERSION_TYPE" = "minor" ]; then
-          minor=$((minor + 1))
-          patch=0
-        elif [ "$VERSION_TYPE" = "patch" ]; then
-          patch=$((patch + 1))
+        # Get latest tag, fallback to 0.0.0 if no tags exist
+        if git tag | grep -q .; then
+          LAST_TAG=$(git describe --tags --abbrev=0)
         else
-          echo "Invalid version type: $VERSION_TYPE"
-          echo "Valid options: major, minor, patch"
-          exit 1
+          LAST_TAG="v0.0.0"
         fi
 
+        VERSION_NUMBER=${LAST_TAG#v}
+
+        echo "Found latest tag: $LAST_TAG"
+        echo "Version number: $VERSION_NUMBER"
+        echo "Version type: $VERSION_TYPE"
+
+        # Split version into parts
+        IFS='.' read -r major minor patch <<< "$VERSION_NUMBER"
+
+        echo "Current: major=$major, minor=$minor, patch=$patch"
+
+        case $VERSION_TYPE in
+          "major")
+            major=$((major + 1))
+            minor=0
+            patch=0
+            ;;
+          "minor")
+            minor=$((minor + 1))
+            patch=0
+            ;;
+          "patch")
+            patch=$((patch + 1))
+            ;;
+          *)
+            echo "Invalid version type: $VERSION_TYPE"
+            exit 1
+            ;;
+        esac
+
         NEW_VERSION="$major.$minor.$patch"
-        echo "New version: $NEW_VERSION"
+
+        echo "New version will be: $NEW_VERSION"
+
         echo "release_version=v$NEW_VERSION" >> $GITHUB_OUTPUT
         {
           echo "new_version=$NEW_VERSION"
@@ -220,28 +235,9 @@ jobs:
 
     - name: Create Release Notes
       run: |
-        # Combine standard release notes with test results
-        cat << 'MAIN_EOF' > release_notes.md
-        # Release v${{ steps.version.outputs.new_version }}
-
-        ## Downloads
-        - Source Code: cysu-v${{ steps.version.outputs.new_version }}.tar.gz
-        - Docker: docker.io/***/cysu:latest
-
-        ## Quick Installation
-        ```bash
-        # Extract source
-        tar -xzf cysu-v${{ steps.version.outputs.new_version }}.tar.gz
-        cd cysu-v${{ steps.version.outputs.new_version }}
-
-        # Install and run
-        pip install -r requirements.txt
-        python run.py
-        ```
-
-        ---
-
-        MAIN_EOF
+        # Simple release notes with just the version and test results
+        echo "# Release v${{ steps.version.outputs.new_version }}" > release_notes.md
+        echo "" >> release_notes.md
 
         # Append test results to release notes (if file exists)
         if [ -f test_results.md ]; then
@@ -272,6 +268,5 @@ jobs:
         tag_name: v${{ steps.version.outputs.new_version }}
         name: Release v${{ steps.version.outputs.new_version }}
         body: ${{ steps.release_body.outputs.release_body }}
-        generate_release_notes: true
         files: |
           cysu-v${{ steps.version.outputs.new_version }}.tar.gz
